# Influx

./: .gitignore  Cargo.toml  Influx API.paw  LLM.md  Makefile  Pipfile  README.md  justfile  proposal.md  test_japanese_output.json  test_japanese_tokenization.py  test_json_compatibility.py
designs/: backend-testing.md  fsrs-design.md
documentation/: about.md  architecture.md  data_storage.md  django.md  files_structure.md  roadmap.md
elm-land-exp/: README.md  justfile
elm-land-exp/src/: Api.elm
elm-land-exp/src-tauri/: tauri.conf.json
elm-land-exp/src/Components/: Sidebar.elm
elm-land-exp/src/Pages/: Counter.elm  Elem.elm  Home_.elm  SignIn.elm  User_.elm
influx_api/: Cargo.toml
influx_api/src/: error.rs  lib.rs  main.rs  prelude.rs
influx_api/src/db/: mod.rs  models.rs
influx_api/src/db/models/: lang.rs  phrase.rs  sandbox.rs  todos.rs  vocab.rs
influx_api/src/doc_store/: mod.rs
influx_api/src/file_sys/: mod.rs
influx_api/src/handlers/: mod.rs
influx_api/src/nlp/: mod.rs  phrase_fitting.rs
influx_api/src/nlp/pylib/: stanza_integration.py
influx_api/src/utils/: macros.rs  trie.rs
influx_client/: .gitignore  README.md  elm-land.json  elm.json  justfile  package-lock.json  package.json
influx_client/assets/scss/: _theme.scss  annotated-text.scss  base.scss  main.scss  popover.scss  reset.scss  sidebar.scss  theme.scss  toast.scss
influx_client/exps/: double-ruby.html
influx_client/scripts/: generate-tailwind-colors.js
influx_client/src/: Api.elm  Bindings.elm  BindingsUtils.elm  Colours.elm  Effect.elm  Nlp.elm  Shared.elm  Utils.elm  View.elm  interop.js
influx_client/src/Api/: DictionaryList.elm  DictionaryLookup.elm  DocCreate.elm  DocDelete.elm  DocEdit.elm  DocumentList.elm  GetAnnotatedDoc.elm  GetDocuments.elm  GetLanguage.elm  GetLanguages.elm  LangCreate.elm  LangDelete.elm  LangEdit.elm  LanguageList.elm  OpenAppDataDir.elm  PokemonList.elm  TermEdit.elm  TokenEdit.elm  Translate.elm
influx_client/src/Components/: AnnotatedText.elm  CollapsibleSection.elm  Common.elm  CssExtra.elm  DataViewElements.elm  DbgDisplay.elm  DictionaryLookup.elm  FormElements.elm  FormElements3.elm  InflectionChain.elm  Layout.elm  ListingElements.elm  Popover.elm  Popup.elm  ResizableSidebar.elm  RibbonNav.elm  StatusColours.elm  Styles.elm  TermEditForm.elm  ToastView.elm  TokenEditForm.elm  Topbar.elm  TtsEmitter.elm
influx_client/src/Datastore/: DictContext.elm  DocContext.elm  FocusContext.elm
influx_client/src/Pages/: Dictionary.elm  Docs.elm  Documents.elm  Home_.elm  Langs.elm  Languages.elm  Ttstest.elm
influx_client/src/Shared/: Model.elm  Msg.elm
influx_client/src/Utils/: FancyMouse.elm  ModifierState.elm
influx_core/: Cargo.toml  justfile
influx_core/migrations/: 000001_initial.sql
influx_core/src/: data_dir.rs  embedded_db.rs  fsrs_scheduler.rs  lib.rs  main.rs  prelude.rs  test_utils.rs
influx_core/src/db/: mod.rs  models.rs
influx_core/src/db/models/: document.rs  fsrs.rs  lang.rs  mod.rs  phrase.rs  sandbox.rs  seed.rs  todos.rs  vocab.rs
influx_core/src/db/models/seed_content/en_demo/: long.txt  macbeth_excerpt.txt  phrase_test.txt  toy.txt
influx_core/src/db/models/seed_content/fr_demo/: inflection_lemma_test.txt  les_miserables_excerpt.txt  toy.txt
influx_core/src/db/models/seed_content/ja_demo/: rashonmon_1.txt
influx_core/src/db/models/seed_content/zh-hant_demo/: diary_of_a_madman.txt
influx_core/src/doc_store/: mod.rs
influx_core/src/handlers/: api_interfaces.rs  doc_handlers.rs  fsrs_handlers.rs  integration_handlers.rs  lang_handlers.rs  mod.rs  phrase_handlers.rs  term_handlers.rs  vocab_handlers.rs
influx_core/src/integration/: mod.rs  stardict.rs
influx_core/src/nlp/: mod.rs  phrase_fitting.rs
influx_core/src/nlp/pylib/: stanza_integration.py
influx_core/src/utils/: mod.rs  trie.rs
influx_core/tests/: dictionary_resources_test.rs  lang_api_tests.rs
influx_nlp/: README.md  experiment.ipynb  justfile  main.py  pyproject.toml
influx_nlp/lib/: annotation.py  japanese_conjugation_analysis.py  japanese_support.py  parsing.py
influx_nlp/lib/japanese_deinflect/: README.md  __init__.py  deinflect.py  derivation_attribute.py  derivations.py  grammar_explanations.py  word_type.py
influx_nlp/tests/: test_annotation.py  test_japanese_deinflect.py  test_japanese_string_deinflect.py  test_japanese_structured_deinflect.py  test_japanese_support.py  test_parsing.py
influx_server/: Cargo.toml  Makefile
influx_server/src/: lib.rs  main.rs
influx_server/src/db/: mod.rs  sql.sql
influx_server/src/db/models/: lang.rs  phrase.rs  sandbox.rs  todos.rs  vocab.rs
influx_server/src/doc_store/: mod.rs
influx_server/src/handlers/: integration_handlers.rs  mod.rs  phrase_handlers.rs
influx_server/src/integration/: mod.rs
influx_server/src/nlp/: mod.rs
influx_ui/: package-lock.json  package.json  svelte.config.js  tailwind.config.js
influx_ui/src/: app.css  panestyle.scss
influx_ui/src-tauri/: Cargo.toml  tauri.conf.json
influx_ui/src-tauri/src/: main.rs
influx_ui/src/lib/: PaneLayout.svelte  store.ts  utils.ts
influx_ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
nlp_server/: .gitignore  Makefile  main.py
research/: furigana-proof-of-concept.py  ja-tokenisation-exp.ipynb  span-wrapping-behaviour.html
research/css-only-resize/: main.html
research/html-ruby/: double-ruby.html  exp.html  exp2.html  over-under-annotate.html
research/panels/: sidebar3.html  sidebars1.html  sidebars2.html
research/pure-css-accordion/: main.html
src/: main.rs  manage.py
src/influx/: asgi.py  settings.py  urls.py  wsgi.py
toy_content/: settings.toml
toy_content/ch_demo/: diary of a madman.md
toy_content/en_demo/: long.md  macbeth 1.md  macbeth 2.md  macbeth 3.md  macbeth excerpt.md  phrase_test.md  toy.md
toy_content/fr/: Les misérables 2.md  toy.md
toy_content/fr_demo/: Les misérables 1.md  Les misérables 3.md  inflection_lemma_test.md  les misérables excerpt.md  toy.md
toy_content/ja_demo/: rashonmon 1.md
toy_content/zh-hant_demo/: diary of a madman.md
(+78 files in other folders)
