[workspace]
members = [
    "influx_api", 
]

[package]
name = "influx"
version = "0.1.0"
edition = "2021"
authors = ["Lómenoirë Mortecc."]
rust-version = "1.70.0"
readme = "README.md"

# see https://doc.rust-lang.org/cargo/reference/manifest.html for info on this file

[dependencies]
influx_api = { path = "./influx_api" }
tokio = { version = "1.29.1", features = ["full"] }
