[workspace]
members = [
    "influx_server", 
]

[package]
name = "influx"
version = "0.1.0"
edition = "2021"
authors = ["Lómenoirë Mortecc."]
rust-version = "1.74.1"
readme = "README.md"

# see https://doc.rust-lang.org/cargo/reference/manifest.html for info on this file

[dependencies]
influx_server = { path = "./influx_server" }
surrealdb = "1.0.2"
tokio = { version = "1.29.1", features = ["full"] }
