[package]
name = "influx_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.166", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.1", features = ["add-extension", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
tracing = "0.1"
surrealdb = {version = "1.0.0-beta.9", features = ['kv-mem', 'kv-rocksdb'] }
thiserror = "1.0.40"
anyhow = "1.0.71"
clap = { version = "4.3.19", features = ["derive"] }

[profile.dev]
opt-level = 0
