[package]
name = "influx_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace", "cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
tracing = "0.1.40"

thiserror = "1.0.51"
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
ts-rs = { version = "6.2.1" }
yaml-front-matter = "0.1.0"
chrono = { version="0.4.31", features = ["serde"] }
maplit = "1.0.2"
serde_json = "1.0"

surrealdb = {version = "1.0.2", features = ['kv-mem', 'kv-rocksdb'] }
pyo3 = { version="0.20.0", features = ['auto-initialize'] }
indoc = "2.0.4"

[profile.dev]
opt-level = 0

# [target.aarch64-apple-darwin]
# rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]