[package]
name = "influx_core"
version = "0.1.0"
edition = "2021"
authors = ["Lómenoirë Mortecc."]
rust-version = "1.88"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "net", "macros"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.2", features = [
    "add-extension",
    "trace",
    "cors",
] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
tracing = "0.1.41"

elm_rs = { version = "0.2.2", features = [
    'derive',
    'serde',
    'chrono',
    'time',
    'uuid',
] }
indoc = "2.0.5"
thiserror = "2.0.9"
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
yaml-front-matter = "0.1.0"
chrono = { version = "0.4.39", features = ["serde"] }
maplit = "1.0.2"
serde_json = "1.0.134"
reqwest = { version = "0.12.12", features = ["json"] }
# SurrealDB is deprecated - commenting out dependency
# surrealdb = { version = "2.1.4", features = [
#     'kv-mem',
# ] }
# pyo3 = { version="0.20.0", features = ['auto-initialize'] }
open = "5.3.1"
async-trait = "0.1.84"
google_translator = "0.2.3"
md5 = "0.7.0"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    # "time",
    "chrono",
] }
time = { version = "0.3.41", features = ["serde"] }
dotenvy = "0.15.7"
postgresql_embedded = "0.19.0"
tempfile = "3.8"
dirs = "5.0"
fsrs = "5.0"
macro_rules_attribute = "0.2.2"

[dev-dependencies]
insta = "1.43.1"
expect-test = "1.5.1"
tokio-test = "0.4"
tracing-test = "0.2.5"
tabled = "0.20.0"
axum-test = "17.3.0"
serde_json = "1.0.134"
serial_test = "3.1.1"

# [profile.dev]
# opt-level = 0

# [target.aarch64-apple-darwin]
# rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
