[project]
name = "influx-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "flask>=3.1.0",
    "ipykernel>=6.29.5",
    "stanza>=1.10.1",
]

[dependency-groups]
dev = [
    "fugashi[unidic]>=1.5.1",
    "nltk>=3.9.1",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pykakasi>=2.3.0",
    "spacy>=3.8.7",
    "sudachidict-full>=20250515",
    "sudachipy>=0.6.10",
    "tabulate>=0.9.0",
    "unidic>=1.1.0",
]
