[package]
name = "influx_app"
version = "0.1.0"
# description = "A Tauri App"
# authors = ["you"]
# license = ""
# repository = ""
# default-run = "app"
# rust-version = "1.60"
edition = "2021"
authors = ["Lómenoirë Mortecc."]
rust-version = "1.74.1"
readme = "../../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [ "api-all", "process-command-api", "devtools"] }
influx_server = { path = "./../../influx_server" }
tokio = { version = "1.37.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
